--- a/package.json
+++ b/package.json
@@ -1,10 +1,21 @@
 {
-  "name": "react-study",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "react-app",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-router": "v4.1.1",
+    "react-router-dom": "v4.1.1"
+  },
+  "devDependencies": {
+    "react-scripts": "0.9.5"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "repository": {
     "type": "git",
